tests/rename/should_compile/Rn043_B.hs
module Rn043_B where

x = 'x'
