tests/rename/should_fail/rnfail001.hs
module ShouldFail where

f x x = 2
